# iracing-notify

./: .gitignore  Dockerfile  README.rst  api.yaml  database-storage.yaml  database.yaml  docker-compose.yml  letsencrypt.yaml  pyproject.toml  redis-storage.yaml  redis.yaml  scraper.yaml  ui.yaml
.github/workflows/: build.yaml
api/: Dockerfile  app.py  pyproject.toml
api/api/: app.py  crud.py  database.py  main.py  models.py  schemas.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/public/: index.html
frontend/src/: Drivers.css  Drivers.js  index.js
iracing_notify/: app.py  config.py.example  driver.py  drivers.py  iracing.py  main.py  notifications.py
scraper/: Dockerfile  README.md  pyproject.toml
scraper/iracing_notify/: config.py.example  drivers.py  main.py
scraper/scraper/: __init__.py  app.py  defaultdrivers.py  driver.py  drivers.py  main.py  mock.py  notifications.py
tests/: test_iracing_notify.py
