[tool.poetry]
name = "iracing-notify"
version = "0.1.0"
description = ""
authors = ["scullionw <scuw1801@usherbrooke.ca>"]

[tool.poetry.dependencies]
python = "^3.7"
iracing-web-api = { git = "https://github.com/scullionw/iracing-web-api.git", branch = "master" }
uvicorn = "^0.11.3"
fastapi = "^0.53.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
