[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["William Scullion <williamscullion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.3"
fastapi = "^0.54.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
black = {version = "^19.10b0", allow-prereleases = true}
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
