[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["William Scullion <williamscullion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.3"
fastapi = "^0.54.1"
sqlalchemy = "^1.3.16"
psycopg2-binary = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint = "*"
black = "*"
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
