[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["William Scullion <williamscullion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
iracing-web-api = { git = "https://github.com/scullionw/iracing-web-api.git", branch = "master" }
requests = "^2.23.0"
redis = "^4.4.4"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint = "*"
black = "*"
mypy = "*"

[tool.poetry.scripts]
scrape = "scraper.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
